# VoiceChatBot

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  server.py
core/: chat_service.py  storage_service.py
core/asr/: __init__.py  asr_router.py  factory.py  readme.md
core/asr/adapters/: __init__.py  base_adapter.py  funasr_offline_adapter.py  funasr_streaming_adapter.py  offline_adapter_base.py  qwen_offline_adapter.py  qwen_streaming_adapter.py  streaming_adapter_base.py
core/asr/interfaces/: __init__.py  asr_config.py  asr_service.py  asr_types.py
core/asr/strategies/: __init__.py  base_strategy.py  offline_strategy.py  streaming_strategy.py  two_pass_strategy.py
core/tts/: __init__.py  edge.py  tts_base.py
data/: sessions.json
