[project]
name = "VoiceChatBot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiortc>=1.14.0",
    "dotenv>=0.9.9",
    "edge-tts>=7.2.8",
    "funasr>=1.3.1",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "openai>=2.32.0",
    "pydub>=0.25.1",
    "python-socks>=2.8.1",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "websockets>=16.0",
]
